tests/compile-fail/bad_timeout_zero.stderr
error: duration cannot be zero
       help: use `timeout = "30s"` or `timeout = "500ms"`
  --> tests/compile-fail/bad_timeout_zero.rs:11:19
   |
11 | #[assay(timeout = "0s")]
   |                   ^^^^
